--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Copy .nojekyll to dist
+        run: cp public/.nojekyll dist/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
